# school-taltech

./: README.md
advanced-programming-hws-f-sharp/: .gitignore
advanced-programming-hws-f-sharp/coursework0/: coursework0.fsx
advanced-programming-hws-f-sharp/coursework1/: coursework1.fsx
advanced-programming-hws-f-sharp/coursework2/: coursework2.fsx
advanced-programming-hws-f-sharp/coursework3/: coursework3.fsx
advanced-programming-hws-f-sharp/coursework4/: coursework4.fsx
advanced-programming-hws-f-sharp/coursework5/: coursework5.fsx
advanced-programming-hws-f-sharp/coursework6/: coursework6.fsx
advanced-programming-hws-f-sharp/coursework7/: FileSystem.fs  FileSystem.fsi  FileSystem.fsproj  coursework7.fsx
advanced-programming-hws-f-sharp/coursework8/: coursework8.fsx
advanced-programming-hws-f-sharp/coursework9/: coursework9.fsx
computer-vision-hws/: Exam.ipynb
computer-vision-hws/hw1/: util.py
computer-vision-hws/hw2/: .gitignore  README.md  dataset.py  hw2.html  hw2.ipynb  hw2_3.py  hw2_4.py  mask_creator.py  requirements.txt  train.py  utils.py
machine-learning-for-embedded-systems/IAS0360-final-project/: ML-final-report.tex
machine-learning-for-embedded-systems/Lab_hw_1/: CMakeLists.txt  Home_assignment_documentation.docx
machine-learning-for-embedded-systems/Lab_hw_1/src/: main.c  simple_neural_networks.c  simple_neural_networks.h
machine-learning-for-embedded-systems/Lab_hw_2/: CNNs_TensorFlow2.txt  Download_MNIST_data.ipynb  HW2_onsche.ipynb  initialModel.tflite  myModel.tflite
(+14 files in other folders)
